# javacltest

./: .gitignore  CMakeLists.txt  README.md  runjava.sh
src/cpp/: cltestjni.cpp
src/java/org/grfstuff/: CLTest.java
